[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameHUDRelated/NotificationPanel/GenericPanel/GenericPanel_BodyBackground.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/NotificationPanel/GenericPanel/GenericPanel_TopDecor.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/NotificationPanel/GenericPanel/GenericPanel_TopBottomBorder.png" type="Texture" id=4]
[ext_resource path="res://GameHUDRelated/NotificationPanel/GenericPanel/GenericPanel_BodySideBorder.png" type="Texture" id=5]
[ext_resource path="res://GameHUDRelated/NotificationPanel/GenericPanel/GenericNotifPanel.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 1 )

[node name="GenericNotifPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 142.0
margin_bottom = 65.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 0

[node name="TopDecor" type="TextureRect" parent="VBoxContainer"]
margin_left = 5.0
margin_right = 137.0
margin_bottom = 13.0
mouse_filter = 2
size_flags_horizontal = 6
texture = ExtResource( 3 )

[node name="TopBorder" type="TextureRect" parent="VBoxContainer"]
margin_top = 13.0
margin_right = 142.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 3
texture = ExtResource( 4 )
stretch_mode = 2

[node name="BodyMarginer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 142.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="TextureContainer" type="MarginContainer" parent="VBoxContainer/BodyMarginer"]
margin_right = 142.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Middle" type="TextureRect" parent="VBoxContainer/BodyMarginer/TextureContainer"]
margin_right = 142.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_horizontal = 3
texture = ExtResource( 2 )
stretch_mode = 2

[node name="SideLeftBorder" type="TextureRect" parent="VBoxContainer/BodyMarginer/TextureContainer"]
margin_right = 1.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 5 )
stretch_mode = 2

[node name="SideRightBorder" type="TextureRect" parent="VBoxContainer/BodyMarginer/TextureContainer"]
margin_left = 141.0
margin_right = 142.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 3
texture = ExtResource( 5 )
stretch_mode = 2

[node name="ContentContainer" type="MarginContainer" parent="VBoxContainer/BodyMarginer"]
margin_right = 142.0
margin_bottom = 50.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BodyMarginer/ContentContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 137.0
margin_bottom = 45.0
mouse_filter = 2

[node name="HeaderLabel" type="Label" parent="VBoxContainer/BodyMarginer/ContentContainer/VBoxContainer"]
margin_right = 132.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
text = "Center title"
align = 1
valign = 1

[node name="ContentLabel" type="Label" parent="VBoxContainer/BodyMarginer/ContentContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 132.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
text = "Center Content"
align = 1
valign = 1

[node name="BottomBorder" type="TextureRect" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 142.0
margin_bottom = 65.0
mouse_filter = 2
size_flags_horizontal = 3
texture = ExtResource( 4 )
stretch_mode = 2
